# shardlib

./: Cargo.toml
src/: lib.rs
src/shamir/: make_shares.rs  mod.rs  recover_file.rs
