[package]
name = "shardlib"
version = "0.1.0"
edition = "2024"

[dependencies]
chacha20poly1305 = "0.10.1"
clap = { version = "4.6.1", features = ["derive"] }
crypto-bigint = { version = "0.7.3", features = ["zeroize"] }
crypto-common = "0.1.7"
rand = "0.10.1"
regex = "1.12.3"
zeroize = { version = "1.8.2", features = ["zeroize_derive"] }
